--- a/public/stylesheets/sass/custom.sass
+++ b/public/stylesheets/sass/custom.sass
@@ -79,19 +79,10 @@ a.signup_button
 
 /* User show page
 
-table.profile
-  width: 100%
-  margin-bottom: 0
-
-td
-  &.main
-    width: 70%
-    padding: 1em
-  &.sidebar
-    width: 30%
-    padding: 1em
-    vertical-align: top
-    background: #ffc
+.sidebar
+  padding: 1em
+  vertical-align: top
+  background: #ffc
 
 .profile img.gravatar
   border: 1px solid #999
@@ -217,3 +208,20 @@ ul.rules
     border: 1px solid black
   ul, ul li, p
     display: inline
+
+#content .group_brief
+  background: #eee
+  margin: 0 25px 10px 0
+  .inner
+    width: 270 - 2 * 8 px
+    margin: 8px
+    .title
+      border-bottom: 1px solid
+    ul.actions
+      margin: 0
+      list-style-type: none
+      font-size: 0.9em
+      li
+        float: right
+        margin-left: 5px
+
