--- a/app/views/groups/index.html.haml
+++ b/app/views/groups/index.html.haml
@@ -1,10 +1,5 @@
-%table
-  %tr
-    %td{:style => "width:480px;"}
-      %h2 User Groups List
-    %td= link_to image_tag("group-new.png",:title=>"Create Group",:height=>"40",:width=>"40"),new_group_path
-
 = render "groups", :object => @groups
+.new= link_to image_tag("group-new.png",:title=>"Create Group",:height=>"40",:width=>"40"),new_group_path
 - if @groups.empty?
   %p There are no groups here.
 
