Some strings are marked for translation Strings for translation are gathered automatically

--- a/app/views/chat_rooms/show.html.haml
+++ b/app/views/chat_rooms/show.html.haml
@@ -1,4 +1,4 @@
-- @title = "#{@chat_room.group.name} Group Chat"
+- @title = t ".title", :group_name => @chat_room.group.name, :default => "%{group_name} Group Chat"
 
 #chat.span-23.last
   .hidden.timestamp= Time.now.to_i
