All views are translated

--- a/app/views/chat_rooms/show.html.haml
+++ b/app/views/chat_rooms/show.html.haml
@@ -9,7 +9,7 @@
         - @chat_room.chat_updates.root.not_new.by_created_at.each do |chat_update|
           = render "chat_updates/chat_update", :object => chat_update
         %a.chat_end{:name => 'chat_end'}
-        = link_to("new thread", "#", :class => :new_message)
+        = link_to(t(".links.new_thread", :default => "new thread"), "#", :class => :new_message)
       = render "chat_updates/form"
     .span-7.last
       = render "chat_rules/chat_rules"
