--- a/app/views/users/_fields.html.haml
+++ b/app/views/users/_fields.html.haml
@@ -12,6 +12,6 @@
   %br/
   = f.password_field :password
 .field
-  = f.label :password_confirmation, "Confirmation"
+  = f.label :password_confirmation
   %br/
   = f.password_field :password_confirmation
