--- a/app/views/pages/home_guest.html.haml
+++ b/app/views/pages/home_guest.html.haml
@@ -1,7 +1,7 @@
 %h1 Peer Supervision Groups
 %p
-  This is the live test site for the Peer Supervision Groups project, for questions or comments visit our
-  %a{:href => "http://github.com/wolfgangihloff/peergroupsupervision"} github site.
-%h2 About Peer Supervision Groups
+  = t(".description", :default => "This is the live test site for the Peer Supervision Groups project, for questions or comments visit our <a href='http://github.com/wolfgangihloff/peergroupsupervision'> github site</a>.")
+%h2= t(".about_title", :default => "About Peer Supervision Groups")
 =render 'about'
-= link_to "Sign up now!", signup_path, :class => "signup_button round"
+= link_to t(".links.signup", :default => "Sign up now!"), signup_path, :class => "signup_button round"
+
