--- a/app/views/groups/edit.html.haml
+++ b/app/views/groups/edit.html.haml
@@ -21,4 +21,4 @@
       %td{:width => "10%"}
         = f.submit "Submit"
       %td
-        = link_to image_tag("button_cancel.png",:height=>"20",:width=>"90"),groups_path
+        = link_to "Cancel", groups_path
