Changed logo to text

--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -1,6 +1,6 @@
 #header.span-24.last.round
   .span-8.colborder
-    = link_to logo, root_path
+    = link_to "Peer Group Supervision", root_path, :class => 'logo'
   .span-15.last
     %h2= @title
   %ul.navigation
