--- a/public/stylesheets/sass/custom.sass
+++ b/public/stylesheets/sass/custom.sass
@@ -1,3 +1,16 @@
+.logo
+  text-align: left
+  font-weight: bold
+  padding: 5px 5px 5px 15px
+  font-size: x-large
+  color: #000
+a.logo
+  &:hover 
+    color: #f00
+    text-decoration: none	
+  &:visited
+    color: #000
+
 .hidden
   display: none
 
