--- a/app/views/pages/home_member.html.haml
+++ b/app/views/pages/home_member.html.haml
@@ -1,12 +1,11 @@
 
 .span-15
-  %h2 Newest groups
+  %h2 Latest groups
   - Group.newest.each do |group|
     = render 'groups/group_brief', :group => group
 
 .span-7.last.sidebar.round
   = render 'pages/user_info'
-  = render 'pages/stats'
   %div Your groups
   - current_user.groups.each do |group|
     = render 'groups/group_brief', :group => group
