Changed to Patongo references in text and help

--- a/app/views/pages/_help.en.html.haml
+++ b/app/views/pages/_help.en.html.haml
@@ -1,7 +1,7 @@
 %p
-Get help on Ruby on the software at our wiki space at GitHub!
+This software will be released as part of Patongo!
 = succeed "." do
-  %a{:href => "http://github.com/wolfgangihloff/peergroupsupervision/wiki"} Rails Tutorial help page
+  %a{:href => "http://www.patongo.de/"} Patongo project page
 %br
 To get more information on peer group supervision, see the
 = succeed "." do
