--- a/app/views/pages/home_guest.html.haml
+++ b/app/views/pages/home_guest.html.haml
@@ -1,6 +1,6 @@
 %h1 Peer Supervision Groups
 %p
-  = t(".description", :default => "This is the live test site for the Peer Supervision Groups project, for questions or comments visit our <a href='http://github.com/wolfgangihloff/peergroupsupervision'> github site</a>.")
+  = t(".description", :default => "This is the live test site for the Peer Supervision Groups project for Patongo. Visit  <a href='http://www.patongo.de/'> project page</a>.")
 %h2= t(".about_title", :default => "About Peer Supervision Groups")
 =render 'about'
 = link_to t(".links.signup", :default => "Sign up now!"), signup_path, :class => "signup_button round"
