--- a/app/views/layouts/_footer.html.haml
+++ b/app/views/layouts/_footer.html.haml
@@ -2,5 +2,5 @@
   %ul.navigation
     %li= link_to t(".links.about", :default => "About"), about_path
     %li= link_to t(".links.contact", :default => "Contact"), contact_path
-    %li= link_to t(".links.github", :url => "http://github.com/wolfgangihloff/peergroupsupervision", :default => "%{url} on GitHub"), "http://github.com/wolfgangihloff/peergroupsupervision"
+    %li= link_to t(".links.patongo", :url => "http://www.patongo.de/", :default => "%{url} Project"), "http://www.patongo.de/"
 
