First batch of translations

--- a/app/views/pages/_help.de.html.haml
+++ b/app/views/pages/_help.de.html.haml
@@ -1,9 +1,9 @@
 %p
-This software will be released as part of Patongo!
+Diese Software wird als Teil von Patongo entwickelt!
 = succeed "." do
-  %a{:href => "http://www.patongo.de/"} Patongo project page
+  %a{:href => "http://www.patongo.de/"} Patongo Projekt Seite
 %br
-To get more information on peer group supervision, see the
-= succeed "." do
-  %a{:href => "http://www.peer-supervision.com/"} web page 
-by Kim-Oliver Tietze.
+Um mehr über Kollegiale Beratung zu erfahren, besuchen Sie die
+= succeed " " do
+  %a{:href => "http://www.peer-supervision.com/"} Webseite 
+von Kim-Oliver Tietze.
