--- a/app/views/pages/_about.de.html.haml
+++ b/app/views/pages/_about.de.html.haml
@@ -1,4 +1,4 @@
 %p
-  Peer Supervision Groups are professional  support groups in the helping professions that provide a safe place to explore the personal and professional  development of the practitioner. Professional Peer Supervision Groups provide a forum for self care that is essential when working with others in professions that require that the therapists/practitioners to give so much of themselves. Peer Supervision Groups are a safe place to explore issues such as why do we help others, dual relationships, transference and counter-transference and other issues that are arise in a therapeutic relationship. It is often an expression of the help we need ourselves. It is the shadow side of helping.
+  Die Kollegiale Fallberatung (oder Intervision) ist eine Beratung unter beruflich Gleichgestellten, bei der nach Lösungen für ein konkretes Problem gesucht wird, ohne zwingendes Vorhandensein von Fall-basierter Fachkompetenz bei den Beteiligten.
   = succeed "." do
-    %a{:href => "http://en.wikipedia.org/wiki/Peer_supervision_groups"} Read more on Wikipedia
+    %a{:href => "http://de.wikipedia.org/wiki/Kollegiale_Fallberatung"} Lesen Sie mehr auf der deutschsprachigen Wikipedia
