Passcode Pat0ng0 added for Registration aka Sign up

--- a/app/views/users/_fields.html.haml
+++ b/app/views/users/_fields.html.haml
@@ -15,3 +15,7 @@
   = f.label :password_confirmation
   %br/
   = f.password_field :password_confirmation
+.field
+  = f.label :passcode
+  %br/
+  = f.password_field :passcode
