--- a/app/views/chat_rooms/show.html.haml
+++ b/app/views/chat_rooms/show.html.haml
@@ -1,17 +1,16 @@
 - @title = t ".title", :group_name => @chat_room.group.name, :default => "%{group_name} Group Chat"
 
-#chat.span-23.last
+#chat
   .hidden.timestamp= Time.now.to_i
   = render "chat_users/chat_users"
-  .main.span-23.last
-    .span-16
+  .main
+    %div.chat_part
+      = render "chat_rules/chat_rules"
+
       %ul.chat_updates
         - @chat_room.chat_updates.root.not_new.by_created_at.each do |chat_update|
           = render "chat_updates/chat_update", :object => chat_update
         %a.chat_end{:name => 'chat_end'}
         = link_to(t(".links.new_thread", :default => "new thread"), "#", :class => :new_message)
       = render "chat_updates/form"
-    .span-7.last
-      = render "chat_rules/chat_rules"
-
 
