--- a/app/views/layouts/_footer.html.haml
+++ b/app/views/layouts/_footer.html.haml
@@ -1,5 +1,5 @@
-#footer.span-24.last.round
-  %ul.navigation
+#footer.round
+  %ul.navigation.round
     %li= link_to t(".links.about", :default => "About"), about_path
     %li= link_to t(".links.contact", :default => "Contact"), contact_path
     %li= link_to t(".links.patongo", :url => "http://www.patongo.de/", :default => "%{url} Project"), "http://www.patongo.de/"
