--- a/public/stylesheets/custom.css
+++ b/public/stylesheets/custom.css
@@ -1,32 +1,21 @@
-.logo {
-  text-align: left;
-  font-weight: bold;
-  padding: 5px 5px 5px 15px;
-  font-size: x-large;
-  color: black; }
-
-a.logo:hover {
-  color: red;
-  text-decoration: none; }
-a.logo:visited {
-  color: black; }
-
 .hidden {
   display: none; }
 
 body {
   background: #ccffff; }
 
-#header {
-  padding-top: 20px;
-  background: white; }
+#outer {
+  width: 96%;
+  margin: 5px 2% 5px 2%; }
 
 #content {
   margin-top: 1em;
   font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
   font-size: 100%;
   background: white;
-  padding: 20px; }
+  padding: 2%;
+  overflow: auto;
+  width: 96%; }
 
 /* Links */
 a {
@@ -38,8 +27,27 @@ a {
   a:visited {
     color: #006699; }
 
-/* Navigation */
+#header {
+  padding: 10px 20px 10px 20px;
+  background: white;
+  overflow: auto; }
+  #header a.logo {
+    text-align: left;
+    font-weight: bold;
+    padding: 5px 5px 5px 15px;
+    font-size: x-large;
+    color: black; }
+    #header a.logo:hover {
+      color: red;
+      text-decoration: none; }
+    #header a.logo:visited {
+      color: black; }
+  #header h2.title {
+    float: right;
+    margin-bottom: 0; }
+
 .navigation {
+  clear: both;
   float: right;
   background-color: white;
   padding: 0 0.7em;
@@ -89,9 +97,17 @@ a.signup_button {
 
 /* User show page */
 .sidebar {
+  float: right;
   padding: 1em;
   vertical-align: top;
-  background: #ffffcc; }
+  background: #ffffcc;
+  width: 270px;
+  height: 300px; }
+
+.groups {
+  margin-left: auto;
+  margin-right: auto;
+  overflow: auto; }
 
 .profile img.gravatar {
   border: 1px solid #999999;
@@ -146,20 +162,34 @@ div.user_info span.user_name {
   position: absolute; }
 
 /* CSS for chat */
-#chat ul.chat_updates {
+#chat .main .chat_part ul.chat_updates {
   height: 300px;
   border: 1px solid;
   margin: 0;
   padding: 3px;
   overflow: auto; }
-#chat li.chat_update.active {
-  background-color: #cccccc; }
-#chat li.chat_update.uncommited div.message {
-  color: green; }
-#chat li.chat_update div {
-  display: inline; }
-  #chat li.chat_update div.login {
-    color: blue; }
+  #chat .main .chat_part ul.chat_updates li.chat_update.active {
+    background-color: #cccccc; }
+  #chat .main .chat_part ul.chat_updates li.chat_update.uncommited div.message {
+    color: green; }
+  #chat .main .chat_part ul.chat_updates li.chat_update div {
+    display: inline; }
+    #chat .main .chat_part ul.chat_updates li.chat_update div.login {
+      color: blue; }
+#chat .main ul.rules {
+  margin: 0;
+  float: right;
+  width: 250px;
+  margin-left: 10px; }
+  #chat .main ul.rules li {
+    list-style-type: none;
+    padding: 3px; }
+  #chat .main ul.rules li.current {
+    background-color: yellow; }
+  #chat .main ul.rules li.rule {
+    border: 1px solid black; }
+  #chat .main ul.rules ul, #chat .main ul.rules ul li, #chat .main ul.rules p {
+    display: inline; }
 
 ul.chatting_users {
   position: relative;
@@ -196,18 +226,6 @@ form.edit_chat_update .field #chat_update_message {
 form.edit_chat_update .field #chat_update_submit {
   width: 104px; }
 
-ul.rules {
-  margin: 0; }
-  ul.rules li {
-    list-style-type: none;
-    padding: 3px; }
-  ul.rules li.current {
-    background-color: yellow; }
-  ul.rules li.rule {
-    border: 1px solid black; }
-  ul.rules ul, ul.rules ul li, ul.rules p {
-    display: inline; }
-
 #content .group_brief {
   background: #eeeeee;
   margin: 0 25px 10px 0; }
@@ -222,4 +240,4 @@ ul.rules {
       font-size: 0.9em; }
       #content .group_brief .inner ul.actions li {
         float: right;
-        margin-left: 5px; }
+        margin-right: 4px; }
