--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -6,6 +6,7 @@
     = javascript_include_tag :defaults
     = javascript_include_tag 'jquery-1.4.2.min'
     = javascript_include_tag 'jquery.form'
+    = javascript_include_tag 'jquery-ui-1.8.5.custom.min'
     = javascript_include_tag 'chat'
   %body
     #outer
