--- a/public/stylesheets/custom.css
+++ b/public/stylesheets/custom.css
@@ -162,41 +162,34 @@ div.user_info span.user_name {
   position: absolute; }
 
 /* CSS for chat */
-#chat #writeboard {
-  float: left;
-  width: 40%;
-  margin-right: 1%;
-  height: 450px; }
-#chat .main {
-  float: left;
-  width: 58%; }
-  #chat .main .chat_part ul.chat_updates {
-    height: 300px;
-    border: 1px solid;
-    margin: 0;
-    padding: 3px;
-    overflow: auto; }
-    #chat .main .chat_part ul.chat_updates li.chat_update.active {
-      background-color: #cccccc; }
-    #chat .main .chat_part ul.chat_updates li.chat_update.uncommited div.message {
-      color: green; }
-    #chat .main .chat_part ul.chat_updates li.chat_update div {
-      display: inline; }
-      #chat .main .chat_part ul.chat_updates li.chat_update div.login {
-        color: blue; }
-  #chat .main ul.rules {
-    margin: 0 0 0 10px;
-    float: right;
-    width: 250px; }
-    #chat .main ul.rules li {
-      list-style-type: none;
-      padding: 3px; }
-    #chat .main ul.rules li.current {
-      background-color: yellow; }
-    #chat .main ul.rules li.rule {
-      border: 1px solid black; }
-    #chat .main ul.rules ul, #chat .main ul.rules ul li, #chat .main ul.rules p {
-      display: inline; }
+#chat .main .chat_part ul.chat_updates {
+  height: 300px;
+  border: 1px solid;
+  margin: 0;
+  padding: 3px;
+  overflow: auto; }
+  #chat .main .chat_part ul.chat_updates li.chat_update.active {
+    background-color: #cccccc; }
+  #chat .main .chat_part ul.chat_updates li.chat_update.uncommited div.message {
+    color: green; }
+  #chat .main .chat_part ul.chat_updates li.chat_update div {
+    display: inline; }
+    #chat .main .chat_part ul.chat_updates li.chat_update div.login {
+      color: blue; }
+#chat .main ul.rules {
+  margin: 0;
+  float: right;
+  width: 250px;
+  margin-left: 10px; }
+  #chat .main ul.rules li {
+    list-style-type: none;
+    padding: 3px; }
+  #chat .main ul.rules li.current {
+    background-color: yellow; }
+  #chat .main ul.rules li.rule {
+    border: 1px solid black; }
+  #chat .main ul.rules ul, #chat .main ul.rules ul li, #chat .main ul.rules p {
+    display: inline; }
 
 ul.chatting_users {
   position: relative;
