--- a/app/views/chat_updates/_form.html.haml
+++ b/app/views/chat_updates/_form.html.haml
@@ -1,4 +1,4 @@
-- form_for [@chat_room, @chat_update], :html => {:autocomplete => "off", :class => 'edit_chat_update'}  do |f|
+= form_for [@chat_room, @chat_update], :html => {:autocomplete => "off", :class => 'edit_chat_update'}  do |f|
   = hidden_field_tag :update_type, "commit"
   = hidden_field_tag "parent_id", @chat_update.parent? ? @chat_update.parent.id : ''
   .field
