--- a/app/views/users/edit.html.haml
+++ b/app/views/users/edit.html.haml
@@ -1,5 +1,5 @@
 %h2 Edit user
-- semantic_form_for(@user) do |f|
+= semantic_form_for(@user) do |f|
   = f.inputs do
     = render :partial => 'fields', :locals => { :f => f }
   = f.buttons do
