--- a/app/views/chat_rooms/show.html.haml
+++ b/app/views/chat_rooms/show.html.haml
@@ -7,7 +7,7 @@
     %div.chat_part
       %ul.chat_updates
         - @chat_room.chat_updates.root.not_new.by_created_at.each do |chat_update|
-          = render "chat_updates/chat_update", :object => chat_update
+          = render "chat_updates/chat_update", :chat_update => chat_update
         %a.chat_end{:name => 'chat_end'}
         = link_to(t(".links.new_thread", :default => "new thread"), "#", :class => :new_message)
       = render "chat_updates/form"
