--- a/app/views/chat_updates/index.erb
+++ b/app/views/chat_updates/index.erb
@@ -1,4 +1,4 @@
 {
-  "feeds": <%= update_feeds @chat_updates %>,
+  "feeds": <%= raw update_feeds @chat_updates %>,
   "timestamp": <%= Time.now.to_i %>
 }
