--- a/app/views/groups/_form.html.haml
+++ b/app/views/groups/_form.html.haml
@@ -1,6 +1,7 @@
-- semantic_form_for @group do |f|
-  = f.input :name
-  = f.input :description
+= semantic_form_for @group do |f|
+  = f.inputs do
+    = f.input :name
+    = f.input :description
 
-  - f.buttons do
+  = f.buttons do
     = f.commit_button
