--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -5,6 +5,7 @@
     = render 'layouts/stylesheets'
     = javascript_include_tag :defaults
     = javascript_include_tag 'jquery-1.4.2.min'
+    = javascript_tag "jQuery.noConflict();"
     = javascript_include_tag 'jquery.form'
     = javascript_include_tag 'chat'
   %body
