--- a/app/views/layouts/_stylesheets.html.haml
+++ b/app/views/layouts/_stylesheets.html.haml
@@ -2,4 +2,5 @@
 = stylesheet_link_tag 'blueprint/print',  :media => 'print'
 /[if lt IE 8] <haml:loud> stylesheet_link_tag 'blueprint/ie' </haml:loud>
 = stylesheet_link_tag 'custom', :media => 'screen'
+= stylesheet_link_tag 'formtastic'
 
