--- a/app/views/topics/index.html.haml
+++ b/app/views/topics/index.html.haml
@@ -1,5 +1,7 @@
 - @title = t(".title", :default => "Submitted topics")
 
+%h2= t(".heading", :default => "List of already submitted topics")
+
 %ul.topics
   - @topics.each do |topic|
     %li.topic
@@ -8,6 +10,6 @@
         %p= topic.author.name
 
       - if topic.content.blank?
-        %p.blank= t(".topic.skip_notice", :default => "%{username} did not submitted his topic.", :username => @topic.author.name)
+        %p.blank= t(".topic.skip_notice", :default => "%{username} did not submitted his topic.", :username => topic.author.name)
       - else
         %p= topic.content
