--- a/app/views/topics/index.html.haml
+++ b/app/views/topics/index.html.haml
@@ -2,14 +2,4 @@
 
 %h2= t(".heading", :default => "List of already submitted topics")
 
-%ul.topics
-  - @topics.each do |topic|
-    %li.topic
-      .author
-        = raw gravatar_for(topic.author)
-        %p= topic.author.name
-
-      - if topic.content.blank?
-        %p.blank= t(".topic.skip_notice", :default => "%{username} did not submitted his topic.", :username => topic.author.name)
-      - else
-        %p= topic.content
+= render "list", :topics => @topics
