--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -8,6 +8,8 @@
     = javascript_tag "jQuery.noConflict();"
     = javascript_include_tag 'jquery.form'
     = javascript_include_tag 'chat'
+    = javascript_include_tag 'supervision'
+    = csrf_meta_tag
   %body
     #outer
       = render 'layouts/header'
