After submitting last vote system goes to questions step

--- a/app/views/topics/_list.html.haml
+++ b/app/views/topics/_list.html.haml
@@ -2,11 +2,11 @@
   - topics.each do |topic|
     %li[topic]
       .author
-        = raw gravatar_for(topic.author)
-        %p= topic.author.name
+        = raw gravatar_for(topic.user)
+        %p= topic.user.name
 
       - if topic.content.blank?
-        %p.blank= t(".topic.skip_notice", :default => "%{username} did not submitted his topic.", :username => topic.author.name)
+        %p.blank= t(".topic.skip_notice", :default => "%{username} did not submitted his topic.", :username => topic.user.name)
       - else
         %p= topic.content
 
