--- a/app/views/topic_questions/new.html.haml
+++ b/app/views/topic_questions/new.html.haml
@@ -4,7 +4,7 @@
 
 %dl
   %dt= t(".heading.topic", :default => "Current topic")
-  %dl
+  %dd
     = render "topics/topic", :topic => @supervision.topic
 
 - if @supervision.topic_questions.count.zero?
@@ -13,19 +13,35 @@
 %ul
   - @supervision.topic_questions.each do |question|
     %li[question]
-      .author
-        = raw gravatar_for(question.user)
-        %p= question.user.name
+      %dl
+        %dt= t(".heading.question", :default => "Question")
+        %dd
+          .author
+            = raw gravatar_for(question.user)
+            %p= question.user.name
 
-    %p= question.question
+          %p= question.question
 
-%p= t(".step_description", :default => "Do you have any question regarding the topic?")
+        - if question.answer
+          %dt= t(".heading.answer", :default => "Answer")
+          %dd= question.answer.answer
+        - else
+          - if @supervision.problem_owner?(current_user)
+            = semantic_form_for(@answer, :url => topic_answers_path) do |f|
+              = hidden_field_tag :supervision_id, @supervision.id
+              = f.inputs do
+                = f.input :question_id, :as => "hidden", :value => question.id
+                = f.input :answer
+              = f.buttons do
+                = f.commit_button t(".answer.submit", :default => "Answer")
 
+- unless @supervision.problem_owner?(current_user)
+  %p= t(".step_description", :default => "Do you have any question regarding the topic?")
 
-= semantic_form_for(@question, :url => topic_questions_path) do |f|
-  = hidden_field_tag :supervision_id, @supervision.id
-  = f.inputs do
-    = f.input :question
-  = f.buttons do
-    = f.commit_button t(".submit", :default => "Ask")
+  = semantic_form_for(@question, :url => topic_questions_path) do |f|
+    = hidden_field_tag :supervision_id, @supervision.id
+    = f.inputs do
+      = f.input :question
+    = f.buttons do
+      = f.commit_button t(".question.submit", :default => "Ask")
 
