Notification is sent after process moves forward to next step after all questions have been answered

--- a/app/views/ideas/index.html.haml
+++ b/app/views/ideas/index.html.haml
@@ -3,8 +3,9 @@
 %h2= t(".heading", :default => "Ideas")
 
 %dl
-  %dt= t(".heading.topic", :default => "Current topic")
+  %dt= t(".topic", :default => "Current topic")
   %dd
+    = render "topics/topic", :topic => @supervision.topic
 
 = render "topic_questions/questions"
 
