Problem owner sees newly added ideas

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -20,3 +20,5 @@
         = yield
       = render 'layouts/footer'
 
+  = javascript_tag "if(document.pgs === undefined) document.pgs = {}; document.pgs.controller = '#{controller.class}';"
+
