New idea ratings are shown to the user

--- a/app/views/ideas/_ideas.html.haml
+++ b/app/views/ideas/_ideas.html.haml
@@ -10,14 +10,16 @@
 
           %p= idea.content
 
-        %dt= t(".heading.rating", :default => "Rating")
-        %dl
-          = form_for(idea) do |f|
-            = hidden_field_tag :supervision_id, @supervision.id
+        - if idea.rating || @supervision.problem_owner?(current_user)
+          %dt= t(".heading.rating", :default => "Rating")
+          %dl
+            = form_for(idea) do |f|
+              = hidden_field_tag :supervision_id, @supervision.id
 
-            - 1.upto(5) do |i|
-              = f.label :"rating_#{i}", i
-              = f.radio_button :rating, i
+              - 1.upto(5) do |i|
+                = f.label :"rating_#{i}", i
+                = f.radio_button :rating, i, idea.rating ? {:disabled => 'disabled'} : {}
 
-            = f.submit t(".rate.rate", :default => "Rate")
+              - unless idea.rating
+                = f.submit t(".rate.rate", :default => "Rate")
 
