--- a/app/views/ideas/index.html.haml
+++ b/app/views/ideas/index.html.haml
@@ -12,17 +12,26 @@
 = render "ideas"
 
 - if @supervision.problem_owner?(current_user)
+
   - if @supervision.ideas.empty?
+
     %p= t(".no_ideas", :default => "Wait for some ideas")
+
 - else
-  %p= t(".step_description", :default => "Any ideas?")
 
-  = semantic_form_for(@idea) do |f|
-    = hidden_field_tag :supervision_id, @supervision.id
-    = f.inputs do
-      = f.input :content
-    = f.buttons do
-      = f.commit_button t(".idea.submit", :default => "Submit")
-      = link_to(t(".idea.no_more", :default => "I have no more ideas"), supervision_votes_path(:supervision_id => @supervision.id), :method => :post)
+  - if @supervision.voted_on_next_step?(current_user) || @supervision.state == "idea_feedback"
 
+    %p= t(".waiting_for_feedback", :default => "Wait for %{problem_owner}'s feedback", :problem_owner => @supervision.problem_owner.name)
+
+  - else
+
+    %p= t(".step_description", :default => "Any ideas?")
+
+    = semantic_form_for(@idea) do |f|
+      = hidden_field_tag :supervision_id, @supervision.id
+      = f.inputs do
+        = f.input :content
+      = f.buttons do
+        = f.commit_button t(".idea.submit", :default => "Submit")
+        = link_to(t(".idea.no_more", :default => "I have no more ideas"), supervision_votes_path(:supervision_id => @supervision.id), :method => :post)
 
